# python-challenge

./: .gitignore  README.md  pyproject.toml
python_challenge/: invoice_parser.py
python_challenge/dto/: currency_rate.py  delivery_record.py  invoice.py  invoice_item.py  local_date_range.py  measurement.py  money.py  unit_price.py
tests/: test_invoice_parser.py
tests/fixtures/: expected_output.json
